objects/Document_Log__c.object
<CustomObject>
    <fields>
        <fullName>Document_Log__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Document Log</label>
        <referenceTo>Document_Log__c</referenceTo>
        <relationshipLabel>Document Logs</relationshipLabel>
        <relationshipName>Document_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Document_Type__c</fullName>
        <label>Document Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Progress Report - Elementary School</fullName>
                </value>
                <value>
                    <fullName>Progress Report - High School</fullName>
                </value>
                <value>
                    <fullName>Report Card - Elementary School</fullName>
                </value>
                <value>
                    <fullName>Report Card - High School</fullName>
                </value>
                <value>
                    <fullName>Transcript</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <inlineHelpText>This is the error encountered while generating the document.</inlineHelpText>
        <label>Error Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Log__c</fullName>
        <label>Log</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Query__c</fullName>
        <inlineHelpText>This is the initial query that was submitted to the system when the batch started.</inlineHelpText>
        <label>Query</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reporting_Period_Name__c</fullName>
        <label>Reporting Period</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Staff__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is a staff lookup for schedule generation logs.</description>
        <label>Staff</label>
        <referenceTo>Staff__c</referenceTo>
        <relationshipLabel>Document Logs</relationshipLabel>
        <relationshipName>Document_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Queue</fullName>
                </value>
                <value>
                    <fullName>In Queue - With Warnings</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Aborted</fullName>
                </value>
                <value>
                    <fullName>Complete - With Warnings</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Student_Reporting_Period__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Student Reporting Period</label>
        <referenceTo>Student_Reporting_Period__c</referenceTo>
        <relationshipLabel>Document Logs</relationshipLabel>
        <relationshipName>Document_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Student__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The student the document was generated for.</inlineHelpText>
        <label>Student</label>
        <referenceTo>Student__c</referenceTo>
        <relationshipLabel>Document Logs</relationshipLabel>
        <relationshipName>Document_Logs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Transmitted_to_S3__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Was the document sent to an S3 server?</inlineHelpText>
        <label>Transmitted to S3</label>
        <type>Checkbox</type>
    </fields>
    <label>Document Log</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Logs</fullName>
        <columns>NAME</columns>
        <columns>Document_Type__c</columns>
        <columns>Error_Message__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Logs</label>
    </listViews>
    <listViews>
        <fullName>Batch_Logs</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Transmitted_to_S3__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Document_Log__c.Batch</value>
        </filters>
        <label>Batch Logs</label>
    </listViews>
    <nameField>
        <label>Document Batch Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Document Logs</pluralLabel>
    <recordTypes>
        <fullName>Batch</fullName>
        <active>true</active>
        <label>Batch</label>
    </recordTypes>
    <recordTypes>
        <fullName>Report_Card</fullName>
        <active>true</active>
        <label>Report Card</label>
    </recordTypes>
    <recordTypes>
        <fullName>Transcript</fullName>
        <active>true</active>
        <label>Transcript</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>