objects/Document_Log__c/listViews/All_Logs.listView-meta.xml
<ListView>
    <fullName>All_Logs</fullName>
    <columns>NAME</columns>
    <columns>Document_Type__c</columns>
    <columns>Error_Message__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Logs</label>
</ListView>